wasm/fasta_merge_streams_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_d4hii3y5/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/d540fe0ad2e82dde07fc737661009c1c0fc3dbdb.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/d540fe0ad2e82dde07fc737661009c1c0fc3dbdb.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/858e4f98ab56df2c227d7992d7343da5623d3ca8.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/858e4f98ab56df2c227d7992d7343da5623d3ca8.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/a286ed04f968fe1648eb9898d52fd965479537dc.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/a286ed04f968fe1648eb9898d52fd965479537dc.json" for subsequent builds)
cache:INFO:  - ok
